# dental-viewer

./: .env.example  .gitignore  .pre-commit-config.yaml  DEPLOY_NGINX.md  Dockerfile  ENHANCED_LASSO_FEATURES.md  GLTF_INTEGRATION.md  INTEGRATION_GUIDE.md  LASSO_TOOL_IMPROVEMENTS.md  Makefile  README.md  demo-integration.sh  docker-compose.yml  env.template  index-backup.html  index.html  mylinealigners.nginx.conf  nginx.conf  package-lock.json  package.json  pyproject.toml  run.sh  setup.sh  start.sh  tasks.md  vite.config.ts
.github/: copilot-instructions.md
app/: main.py
app/api/: health.py  jobs.py  segment.py
app/core/: config.py
app/engines/: __init__.py  base.py  ml.py  simple.py
app/mesh/: io.py
app/schemas/: job.py
app/utils/: paths.py
app/workers/: manager.py
backend/: .gitignore  CONDA_SETUP.md  PYTHON313_SETUP.md  README.md  config.py  environment.yml  main.py  package-lock.json  package.json  requirements.txt  segmentation_service.py  server.js  setup.sh  setup_conda.sh  start_conda.sh  start_dev.sh
backend-auth/: package.json  server.js
backend/config/: constants.js  database.js  upload.js
backend/controllers/: authController.js  caseController.js  index.js  segmentController.js
backend/middleware/: auth.js  errorHandler.js
backend/routes/: auth.js  cases.js  debug.js  segments.js
backend/services/: authService.js  caseService.js  config_utils.py  gltf_converter.py  index.js  (+3 more)
fastapi/: __init__.py  responses.py  simple.py  testclient.py
samples/: sample.stl
src/: App.vue  main.ts  router.ts  style.css
tests/: test_api.py
(+69 files in other folders)
